Complete Preliminary Data Exploration

--- a/Dr_Semmelweis_Handwashing_Discovery_(start).ipynb
+++ b/Dr_Semmelweis_Handwashing_Discovery_(start).ipynb
@@ -147,7 +147,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 4,
       "metadata": {
         "id": "Wdr6_0pk63dh"
       },
@@ -178,21 +178,60 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {
         "id": "CDYyshRAHySR"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "df_yearly shape is: (12, 4) and df_montly shape is: (98, 3)\n"
+          ]
+        }
+      ],
+      "source": [
+        "print(f\"df_yearly shape is: {df_yearly.shape} and df_montly shape is: {df_monthly.shape}\")"
+      ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 9,
       "metadata": {
         "id": "0CmnKF4_Hyg0"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "df_yearly column names are: \n",
+            "Index(['year', 'births', 'deaths', 'clinic'], dtype='object')\n",
+            "df_monthly column names are: \n",
+            "Index(['date', 'births', 'deaths'], dtype='object')\n",
+            "Years included: \n",
+            "0     1841\n",
+            "1     1842\n",
+            "2     1843\n",
+            "3     1844\n",
+            "4     1845\n",
+            "5     1846\n",
+            "6     1841\n",
+            "7     1842\n",
+            "8     1843\n",
+            "9     1844\n",
+            "10    1845\n",
+            "11    1846\n",
+            "Name: year, dtype: int64\n"
+          ]
+        }
+      ],
+      "source": [
+        "print(f\"df_yearly column names are: \\n{df_yearly.columns}\")\n",
+        "print(f\"df_monthly column names are: \\n{df_monthly.columns}\")\n",
+        "print(f\"Years included: \\n{df_yearly.year}\")"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -205,12 +244,28 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 10,
       "metadata": {
         "id": "xdyyfk2oH0Ab"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Are there Nan Values in yearly?? False\n",
+            "Are there Nan Values in monthly?? False\n",
+            "Are there dupe Values in yearly?? False\n",
+            "Are there dupe Values in monthly?? False\n"
+          ]
+        }
+      ],
+      "source": [
+        "print(f\"Are there Nan Values in yearly?? {df_yearly.isna().values.any()}\")\n",
+        "print(f\"Are there Nan Values in monthly?? {df_monthly.isna().values.any()}\")\n",
+        "print(f\"Are there dupe Values in yearly?? {df_yearly.duplicated().values.any()}\")\n",
+        "print(f\"Are there dupe Values in monthly?? {df_monthly.duplicated().values.any()}\")"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -223,12 +278,42 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 11,
       "metadata": {
         "id": "8emz_sBZH2GL"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Yearly stats.\n",
+            "          year   births  deaths\n",
+            "count    12.00    12.00   12.00\n",
+            "mean  1,843.50 3,152.75  223.33\n",
+            "std       1.78   449.08  145.38\n",
+            "min   1,841.00 2,442.00   66.00\n",
+            "25%   1,842.00 2,901.75  100.25\n",
+            "50%   1,843.50 3,108.50  219.50\n",
+            "75%   1,845.00 3,338.25  263.50\n",
+            "max   1,846.00 4,010.00  518.00\n",
+            "Monthly stats.\n",
+            "                                date  births  deaths\n",
+            "count                             98   98.00   98.00\n",
+            "mean   1845-02-11 04:24:29.387755008  267.00   22.47\n",
+            "min              1841-01-01 00:00:00  190.00    0.00\n",
+            "25%              1843-02-08 00:00:00  242.50    8.00\n",
+            "50%              1845-02-15 00:00:00  264.00   16.50\n",
+            "75%              1847-02-22 00:00:00  292.75   36.75\n",
+            "max              1849-03-01 00:00:00  406.00   75.00\n",
+            "std                              NaN   41.77   18.14\n"
+          ]
+        }
+      ],
+      "source": [
+        "print(f\"Yearly stats.\\n{df_yearly.describe()}\")\n",
+        "print(f\"Monthly stats.\\n{df_monthly.describe()}\")"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -249,12 +334,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 15,
       "metadata": {
         "id": "qWcjo7O5H3g3"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "The deaths of women giving birth through the 1840s is: 7.08%\n"
+          ]
+        }
+      ],
+      "source": [
+        "women_deaths_percent = (df_yearly.deaths.sum() / df_yearly.births.sum() )* 100\n",
+        "print(f\"The deaths of women giving birth through the 1840s is: {women_deaths_percent:.2f}%\")"
+      ]
     },
     {
       "cell_type": "markdown",
