--- a/Dr_Semmelweis_Handwashing_Discovery_(start).ipynb
+++ b/Dr_Semmelweis_Handwashing_Discovery_(start).ipynb
@@ -3373,21 +3373,39 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 22,
       "metadata": {
         "id": "Zv47y222ICFE"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "df_monthly[\"pct_deaths\"] = df_monthly.deaths / df_monthly.births\n",
+        "before_handwashing = df_monthly[df_monthly.date < handwashing_start]\n",
+        "after_handwashing = df_monthly[df_monthly.date >= handwashing_start]"
+      ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 25,
       "metadata": {
         "id": "uwVulybHIBk_"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Average death rate before 1847 was 10.53%\n",
+            "Average death rate after 1847 was 2.15%\n"
+          ]
+        }
+      ],
+      "source": [
+        "bhw_rate = before_handwashing.deaths.sum() / before_handwashing.births.sum() * 100\n",
+        "ahw_rate = after_handwashing.deaths.sum() / after_handwashing.births.sum() * 100\n",
+        "print(f\"Average death rate before 1847 was {bhw_rate:.4}%\")\n",
+        "print(f\"Average death rate after 1847 was {ahw_rate:.3}%\")"
+      ]
     },
     {
       "cell_type": "markdown",
