Complete Use a T-Test to Show Statistical Significance Challenge.

--- a/Dr_Semmelweis_Handwashing_Discovery_(start).ipynb
+++ b/Dr_Semmelweis_Handwashing_Discovery_(start).ipynb
@@ -6016,21 +6016,25 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 61,
       "metadata": {
         "id": "3gG5RDz_IQLJ"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "import scipy.stats as stats"
+      ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 62,
       "metadata": {
         "id": "KQbDwe_GIP_G"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "t_stat, p_value = stats.ttest_ind(a=before_handwashing.pct_deaths, b=after_handwashing.pct_deaths)"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -6045,12 +6049,39 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 64,
       "metadata": {
         "id": "3qNGdccG6D34"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "p-value is 0.0000002985\n"
+          ]
+        }
+      ],
+      "source": [
+        "print(f\"p-value is {p_value:.10f}\")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 65,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "t=statistic is 5.5116\n"
+          ]
+        }
+      ],
+      "source": [
+        "print(f\"t=statistic is {t_stat:.4f}\")"
+      ]
     }
   ],
   "metadata": {
